<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.aparecido.databindingestudo.Util" />

        <variable
            name="user"
            type="com.example.aparecido.databindingestudo.User" />

        <variable
            name="bindListener"
            type="com.example.aparecido.databindingestudo.BindListener" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/simple_data_binding_example"
                style="@style/HeadersTheme" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@{user.firstName}" />

                <TextView
                    android:id="@+id/tv_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@{user.lastName}" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/example_listeners_for_click_events"
                style="@style/HeadersTheme"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(view)-> bindListener.onClickName( view, user.firstName, user.lastName ) }"
                android:onLongClick="@{bindListener::onLongClick}"
                android:padding="16dp"
                android:text="@{user.fullName()}" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onCheckedChanged="@{(cb, isChecked) -> bindListener.onChangeState(context, isChecked)}"
                android:text="@string/checkbox_text" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/example_data_binding_constant"
                style="@style/HeadersTheme" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> Util.listenerClick(view, user)}"
                android:padding="16dp"
                android:text="@{Util.CONSTANT}" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/example_setting_imageview_content"
                style="@style/HeadersTheme" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="center"
                app:picassoLoad="@{ user.imageUrl }" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/example_reusing_layouts"
                style="@style/HeadersTheme" />

            <include
                layout="@layout/full_name"
                app:userInside="@{user}" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/example_recycler_view_with_data_binding"
                style="@style/HeadersTheme"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/usersListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:scrollbars="vertical"
                tools:listitem="@layout/user" />
        </LinearLayout>
    </ScrollView>
</layout>
